# sui-local-development-platform

./: Alpine_Lightweight_Rust_Dockerfile  Buster-Debian_Slim_Rust.Dockerfile  Dockerfile  ReadMe.md  Swissborg_Rust.Dockerfile  docker-compose.yml  sui_start_script.sh
docs/: comms-indexer.md  docker-network.md  market-builder-concepts.md  rust_sui_connector.md  smart-contract.md
docs/deepbook/: available-pools.md
docs/schemas/: ruis_sui_connector_config.schema.json  sui_deepnook_v3_indexer.schema.json
docs/testing/: docker-network.md  testing-notes.md
environments/local/: rust_sui_connector.json
environments/local/wiremock-config/mappings/: deepbook.indexer.json
hello_world_compile_test/: Cargo.toml
rust_client_sui/: Cargo.toml
rust_client_sui/src/: main.rs
rust_client_sui/src/events/: event_handler.rs
rust_sui_connector/: Cargo.toml
rust_sui_connector/src/: config_handler.rs  main.rs  market_client_handler.rs
rust_sui_connector/src/errors/: config_loading_errors.rs  data_fetching_errors.rs  mod.rs
rust_sui_connector/src/json_schema_validation/: market_pair_validation.rs
rust_sui_connector/src/market_data_collector/: deepbook_connector.rs  deepbook_orderbook.rs  mod.rs  request_handler.rs
smart_contract_simple/: Move.toml
smart_contract_simple/sources/: smart_contract_simple.move  transaction_handler.move
smart_contract_simple/tests/: smart_contract_simple_tests.move
